<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Button
<<<<<<< HEAD
        android:id="@+id/btn_show_or_hide_game_pad"
        android:text="打开手柄"
=======
        android:id="@+id/game_console_init"
        android:text="@string/init_game_pad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/game_console_show"
        android:text="@string/show_game_pad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/game_console_hide"
        android:text="@string/hide_game_pad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/game_console_release"
        android:text="@string/release_game_pad"
>>>>>>> 5e12d0d119070e715d34f95477594d850204a3fb
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</LinearLayout>