<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black">

        </FrameLayout>

    </FrameLayout>


    <Button
        android:id="@+id/btn_show_or_hide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hide_or_show"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <Button
                    android:id="@+id/btn_orientation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/roll_orientation" />

                <Button
                    android:id="@+id/btn_clarity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clarity" />

                <Button
                    android:id="@+id/btn_audio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="@string/audio" />

                <Button
                    android:id="@+id/btn_camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="@string/camera" />

                <Button
                    android:id="@+id/btn_clipboard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="@string/clipboard" />

                <Button
                    android:id="@+id/btn_file_channel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="@string/file_channel" />

                <Button
                    android:id="@+id/btn_ground"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="@string/ground" />

                <Button
                    android:id="@+id/btn_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="@string/location" />

                <Button
                    android:id="@+id/btn_message_channel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="@string/message_channel" />

                <Button
                    android:id="@+id/btn_pod_control"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="@string/pod_control" />

                <Button
                    android:id="@+id/btn_sensor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="@string/sensor" />

                <Button
                    android:id="@+id/btn_unclassified"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="@string/unclassified" />

                <Button
                    android:id="@+id/btn_probe_network"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="@string/probe_network" />

                <Button
                    android:id="@+id/btn_local_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="@string/local_input" />

            </LinearLayout>


        </androidx.core.widget.NestedScrollView>

        <androidx.core.widget.NestedScrollView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="0dp">
            <LinearLayout
                android:gravity="end"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn_show_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="show Info"/>

                <TextView
                    android:id="@+id/tv_info"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btn_background"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="background"/>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>