<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/btn_throw_exception"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_exception" />

    <LinearLayout
        android:id="@+id/cl_container"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_pause"
            android:textSize="12sp"
            android:padding="0dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/pause" />

        <Button
            android:id="@+id/btn_resume"
            android:textSize="12sp"
            android:padding="0dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/resume" />

        <Button
            android:id="@+id/btn_stop"
            android:textSize="12sp"
            android:padding="0dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/stop" />

        <Button
            android:id="@+id/btn_restart"
            android:textSize="12sp"
            android:padding="0dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/restart" />

    </LinearLayout>

</LinearLayout>