<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <TextView
            android:text="@string/is_open_camera_mirror"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <Space
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_enable_mirror"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/fm_local_canvas"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp">

    </FrameLayout>


    <Button
        android:id="@+id/btn_add_camera_canvas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_local_canvas" />

    <Button
        android:id="@+id/btn_publish_stream"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/push_multiple_streams" />

    <Button
        android:id="@+id/btn_check_camera_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switch_rear_camera" />

    <Button
        android:id="@+id/btn_check_camera_front"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switch_front_camera" />


</LinearLayout>