<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_enable"
        android:text="@string/enable_location_service"
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_listener"
        android:text="@string/location_event_listener"
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.IconMenu.Item"
            android:text="@string/location_service_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioGroup
            android:id="@+id/rg_mode"
            android:gravity="end"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:text="@string/auto"
                android:id="@+id/rb_auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RadioButton
                android:text="@string/manual"
                android:id="@+id/rb_manual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_setRemoteLocation"
            android:text="@string/set_remote_location"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_location"
            android:text="客户端的坐标是："
            android:layout_weight="1"
            android:layout_width="0dp"
            android:textSize="12sp"
            android:layout_height="60dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_setRemoteLocation2"
            android:text="@string/set_remote_location"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/et_lat"
            android:hint="@string/latitude"
            android:inputType="number"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:textSize="12sp"
            android:layout_height="60dp" />

        <EditText
            android:id="@+id/et_long"
            android:hint="@string/longitude"
            android:inputType="number"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:textSize="12sp"
            android:layout_height="60dp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <TextView
            android:id="@+id/tv_log"
            android:textSize="12sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>


</LinearLayout>