<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/type_of_send_message"/>


        <Spinner
            android:id="@+id/spinner_send_message2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:gravity="center"
            android:background="#E5E5E5"
            android:spinnerMode="dropdown"
            android:entries="@array/send_message_type"/>

    </LinearLayout>

    <EditText
        android:id="@+id/et_send_payload2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/content_of_message"/>

    <EditText
        android:id="@+id/et_channel_uid2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/dst_channel_uid"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb_ack2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/need_ack" />

        <CheckBox
            android:id="@+id/cb_pressure_test2"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>


        <EditText
            android:id="@+id/et_pressure_test2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:hint="@string/period_pressure_test"
            android:inputType="numberDecimal"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb_timeout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/et_timeout2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/timeout"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/btn_send_message2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/send_message"/>

    </LinearLayout>

    <TextView
        android:id="@+id/display_panel2"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:fadeScrollbars="false"
        android:scrollbars="vertical"
        android:visibility="gone"
        android:background="#E5E5E5"/>

    <TextView
        android:id="@+id/stats_info2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:visibility="gone"
        android:fadeScrollbars="false"
        android:scrollbars="vertical"/>

</LinearLayout>